testsuite/veronac/features/compile-fail/when.out/stderr.txt
when.verona:36:3: error: Inference failed for method test1
  test1(r: cown[Log] & imm, m: LogMessage & mut)
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
when.verona:42:3: error: Inference failed for method test2
  test2(r: cown[NotLog] & imm, m: LogMessage & iso)
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
when.verona:56:5: error: Cannot use variable 'm'
    when (var a = r) { m.run(a) };
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
when.verona:55:5: note: 'm' was previously consumed here
    when (var a = r) { m.run(a) };
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3 errors generated
